Fixed z-index for menu button

--- a/css/master.css
+++ b/css/master.css
@@ -190,7 +190,7 @@ body {
     color: white;
     background-color: #8e9aafcc;
     border: solid 1px #4a4e69;
-    border-radius: 1em;
+    border-radius: .5em;
     font-family: 'IBM Selectric Manifold', sans-serif;
 }
 
@@ -211,7 +211,7 @@ body {
 }
 
 #percentage-list li {
-    font-size: 1.25em; /* Adjust as needed */
+    font-size: 1em; /* Adjust as needed */
     margin-bottom: .5em; /* Adjust as needed */
 }
 
@@ -307,7 +307,7 @@ button {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    z-index: 9999;
+    z-index: 1003;
 }
 
 .menu li a .menu-icon {
@@ -380,7 +380,7 @@ button {
     width: 100%;
     height: 100%;
     background: #6b788fc2;
-    z-index: 1005;
+    z-index: 9999;
 }
 
 .loader {
